feat: 지난주 피드백 내용 반영